--- a/mtech-challenge/src/styles/ProcurarPokemons.css
+++ b/mtech-challenge/src/styles/ProcurarPokemons.css
@@ -402,9 +402,12 @@ body {
 
 .header-section {
   display: flex;
-  align-items: flex-start;
   align-items: center;
   flex-direction: row-reverse;
   justify-content: space-between;
-  margin: 20px;
+  margin: 40px;
+}
+
+.press-enter-text {
+  color: yellow;
 }
